--- a/portfolio/PortfolioAbout.html
+++ b/portfolio/PortfolioAbout.html
@@ -26,9 +26,9 @@
                 <nav>
                     <ul id="h1">
                         <li><a href="Portfolioindex.html">Home</a></li>
-                        <li><a href="PortfolioAbout.html">About</a></li>
-                        <li><a href="PortfolioExperience.html">Experience</a></li>
-                        <li><a href="PortfolioContact.html">Contact</a></li>
+                        <li><a href="Portfolioabout.html">About</a></li>
+                        <li><a href="Portfolioexperience.html">Experience</a></li>
+                        <li><a href="Portfoliocontact.html">Contact</a></li>
                     </ul>
                 </nav>
         </header>
