--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -25,10 +25,10 @@
                 <br>
                 <nav>
                     <ul id="h1">
-                        <li><a href="Portfolioindex.html">Home</a></li>
-                        <li><a href="Portfolioabout.html">About</a></li>
-                        <li><a href="Portfolioexperience.html">Experience</a></li>
-                        <li><a href="Portfoliocontact.html">Contact</a></li>
+                        <li><a href="portfolioindex.html">Home</a></li>
+                        <li><a href="portfolioabout.html">About</a></li>
+                        <li><a href="portfolioexperience.html">Experience</a></li>
+                        <li><a href="portfoliocontact.html">Contact</a></li>
                     </ul>
                 </nav>
         </header>
