--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -15,7 +15,7 @@
 </head>
     <body>
         <header>
-            <a href= "Portfolioindex.html"><img src = "images/arrow.jpg" class= "home-button" alt="arrow"></a>
+            <a href= "portfolioindex.html"><img src = "images/arrow.jpg" class= "home-button" alt="arrow"></a>
             <h1>
                 <strong>RILEY STRASSER</strong>
             </h1>
