Update and rename PortfolioContact.html to portfoliocontact.html

--- a/portfolio/portfoliocontact.html
+++ b/portfolio/portfoliocontact.html
@@ -15,7 +15,7 @@
 </head>
     <body>
         <header>
-            <a href= "Portfolioindex.html"><img src = "images/arrow.jpg" class= "home-button" alt="arrow"></a>
+            <a href= "portfolioindex.html"><img src = "images/arrow.jpg" class= "home-button" alt="arrow"></a>
             <h1>
                 <strong>RILEY STRASSER</strong>
             </h1>
@@ -25,10 +25,10 @@
                 <br>
                 <nav>
                     <ul id="h1">
-                        <li><a href="Portfolioindex.html">Home</a></li>
-                        <li><a href="Portfolioabout.html">About</a></li>
-                        <li><a href="Portfolioexperience.html">Experience</a></li>
-                        <li><a href="Portfoliocontact.html">Contact</a></li>
+                        <li><a href="portfolioindex.html">Home</a></li>
+                        <li><a href="portfolioabout.html">About</a></li>
+                        <li><a href="portfolioexperience.html">Experience</a></li>
+                        <li><a href="portfoliocontact.html">Contact</a></li>
                     </ul>
                 </nav>
         </header>   
@@ -86,7 +86,7 @@
             </ul>
            </div>
           
-            <a class="link footer-right" href="PortfolioContact.html">CONTACT FORM</a>
+            <a class="link footer-right" href="portfoliocontact.html">CONTACT FORM</a>
         </div>
     
       <div id="grad" class="copyright">
