--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -8,7 +8,7 @@
 	<meta content="description" name="Portfolio experience">
     <meta name="keywords" content="UX UI software programming" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/PortfolioExperience.css" type="text/css">
+	<link rel="stylesheet" href="css/portfolioexperience.css" type="text/css">
     <link rel="stylesheet" href="css/stylesTable.css" type="text/css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
