--- a/portfolio/portfolioabout.html
+++ b/portfolio/portfolioabout.html
@@ -3,14 +3,14 @@
 <html lang="en">
 <head>  
     <title>Index</title>
-    <meta name="author" content="Riley Strasser">
+    	<meta name="author" content="Riley Strasser">
 	<meta charset="UTF-8">
 	<meta content="description" name="Portfolio experience">
-    <meta name="keywords" content="UX UI software programming" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="css/PortfolioExperience.css" type="text/css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    	<meta name="keywords" content="UX UI software programming" />
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="css/portfolioexperience.css" type="text/css">
+   	<link rel="preconnect" href="https://fonts.gstatic.com">
+    	<link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
 </head>
     <body>
         <header>  
