--- a/portfolio/portfolioindex.html
+++ b/portfolio/portfolioindex.html
@@ -24,7 +24,7 @@
                 <br>
                 <nav>
                     <ul id="h1">
-                        <li><a href="portfolioindex.html">Homeie</a></li>
+                        <li><a href="portfolioindex.html">Home</a></li>
                         <li><a href="portfolioabout.html">About</a></li>
                         <li><a href="portfolioexperience.html">Experience</a></li>
                         <li><a href="portfoliocontact.html">Contact</a></li>
