--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -95,7 +95,7 @@
 
                  <div id="d" class="flexbox">
                     <div><h3><i>Responsive Web Design</i></h3></div>
-                    <div class="flexbox img"><img src="../images/pacifictrailsprojectimage.png" alt="pacificc trails" width="300" height="200"></div>
+                    <div class="flexbox img"><img src="images/pacifictrailsprojectimage.png" alt="pacificc trails" width="300" height="200"></div>
                     <div class="button"><a target="_blank" href="https://github.com/rstra9564/rstra9564.github.io/tree/main/PacificTrailsResort">View Project</a></div>
                  </div>
                </div>
