--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -75,26 +75,26 @@
 <!--Flex container containing Projects-->
             <div id="flex-container">
             <div id="a" class="flexbox">
-                    <div><h3><i>Web Design</i></h3></div>
+                    <div><h3>Web Design</h3></div>
                     <div class="flexbox img"><img src="images/durangojewelry.png" alt="custom Fonts" width="300" height="200"></div>
                     <div class="button"><a target="_blank" href="https://github.com/rstra9564/rstra9564.github.io/tree/main/w3%20Durango%20Jewelery%20Project">View Project</a></div>
                </div>
 
             <div id="b" class="flexbox">
-                    <div><h3><i>Flex Box</i></h3></div>
+                    <div><h3>Flex Box</h3></div>
                     <div class="flexbox img"><img src="images/useoffloatsyntax.png" alt="custom Fonts" width="300" height="200"></div>
                     <div class="button"><a target="_blank" href="https://github.com/rstra9564/rstra9564.github.io/tree/main/buildingBlocks">View Project</a></div>
                </div>
  
                    
                <div id="c" class="flexbox">
-                    <div><h3><i>Mission Impossible</i></h3></div>
+                    <div><h3>>Mission Impossible</h3></div>
                     <div class="flexbox img"><img src="images/missionimpossiblescreenshot.png" alt="custom Fonts" width="300" height="200"></div>
                     <div class="button"><a target="_blank" href="https://github.com/rstra9564/rstra9564.github.io/tree/main/mission%20impossible">View Project</a></div>
                  </div>
 
                  <div id="d" class="flexbox">
-                    <div><h3><i>Responsive Web Design</i></h3></div>
+                    <div><h3>Responsive Web Design</h3></div>
                     <div class="flexbox img"><img src="images/pacifictrailsprojectimage.png" alt="pacificc trails" width="300" height="200"></div>
                     <div class="button"><a target="_blank" href="https://github.com/rstra9564/rstra9564.github.io/tree/main/PacificTrailsResort">View Project</a></div>
                  </div>
