--- a/portfolio/portfolioabout.html
+++ b/portfolio/portfolioabout.html
@@ -39,7 +39,7 @@
             <div id="home-container">
                 <div id="about" class="home-flex">
                     <div>
-                        <h5 class="google"> I am currently Studying coding as a student at CWI working toward finishing
+                        <h5> I am currently Studying coding as a student at CWI working toward finishing
                             <br>
                              my Associates degree in Software Engineering by spring of 2025. I am planning on transferring to BSU once
                              <br> 
@@ -54,7 +54,7 @@
                     </div>
                         <div class="home-img"><img src="images/personalimg.png" alt="personal portrait" width="800" height="400"></div>
                    </div>
-             </div>
+              </div>
          <footer>
             <div class="footer-container">
                <a class="link footer-left" href="#">BACK TO TOP</a>
