--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -88,7 +88,7 @@
  
                    
                <div id="c" class="flexbox">
-                    <div><h3>>Mission Impossible</h3></div>
+                    <div><h3>Mission Impossible</h3></div>
                     <div class="flexbox img"><img src="images/missionimpossiblescreenshot.png" alt="custom Fonts" width="300" height="200"></div>
                     <div class="button"><a target="_blank" href="https://github.com/rstra9564/rstra9564.github.io/tree/main/mission%20impossible">View Project</a></div>
                  </div>
