--- a/portfolio/portfolioindex.html
+++ b/portfolio/portfolioindex.html
@@ -38,7 +38,7 @@
             <div id="home-container">
                 <div id="home" class="home-flex"> 
                     <div>
-                        <h5 class="google">My name is Riley Strasser. Thank you for Visiting my website! 
+                        <h5>My name is Riley Strasser. Thank you for Visiting my website! 
                             <br>
                             please browse around and view my projects, there will be plenty more to come!
                             <br>
