--- a/portfolio/portfolioexperience.html
+++ b/portfolio/portfolioexperience.html
@@ -35,7 +35,7 @@
         <main>       
             <hr>
                 <h2>MY EXPERIENCE</h2>
-                    <h5 class="google">During senior year of highschool I worked full time at a smartphone repair shop 
+                    <h5>During senior year of highschool I worked full time at a smartphone repair shop 
                             <br>
                              understanding the ins and outs of all phones and laptops as well as gained experience in sales.
                             <br>
