--- a/ProjectSite_RileyStrasser/Index.html
+++ b/ProjectSite_RileyStrasser/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<!--Riley Strasser 2/2/25-->
+<!--Riley Strasser 2/16/25-->
 <html>
-    <head>
+    <head> 
 <!--Data-->
         <meta name="author" content="Riley Strasser">
         <meta charset="UTF-8">
@@ -9,20 +9,22 @@
     	<meta name="keywords" content="UX UI software programming" />
     	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>STRAÜSS</title> 
-	    <link rel="stylesheet" href="main.css" type="text/css">
-            <script src="script.js">
+	    <link rel="stylesheet" href="CSS/main.css" type="text/css">
+            <script src="JS/script.js">
             </script>
         <noscript>Sorry, your browser does not support JavaScript!</noscript>
-    </head>
+    </head> 
          <header>
+            <a id="top"></a>
 <!--Navigation Bar-->
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="showtimes.html">ShowTimes</a></li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="newmusic.html">New Music</a></li>
-                        <li><a href="videos.html">Videos</a></li>
+                        <li><a href="#showtimessection">ShowTimes</a></li>
+                        <li><a href="#shopsection">Shop</a></li>
+                        <li><a href="#newmusicsection">New Music</a></li>
+                        <li><a href="#videossection">Videos</a></li>
+                        <li><a href="#contactsection">Contact</a></li>
                     </ul>
                 </nav>
          </header>
@@ -39,15 +41,60 @@
             </div>
          <hr>
          <br>
+         <a id="showtimessection"></a>
          <h2 id="ticketbutton">Purchase Your Tickets Now!</h2>
          <br>
          <button type="button" onclick="myFunction()">Tickets <span>&#10230;</span></button>
          <br>
          <br>
+         <a id="newmusicsection"></a>
+         <div class="gallery-wrap">
+            <img src="images/back.png" id="backBtn">
+            <div class="gallery">
+                <div>
+                    <span><img src="images/STAY AWHILE.png"></span>
+                    <span><img src="images/DANS.png"></span>
+                    <span><img src="images/LINEZ.png"></span>
+                </div>
+                <div>
+                    <span><img src="images/BURNFORYOU.png"></span>
+                    <span><img src="images/ENRGY.png"></span>
+                    <span><img src="images/SUBLIMINAL.png"></span>
+                </div>
+            </div>
+            <img src="images/next.png" id="nextBtn">
+        </div>
+         <a id="shopsection"></a>
+         <a id="videossection"></a>
 <!--Footer Links-->
             <footer>
+                <a id="contactsection"></a>
+                
+                <div class="contact-form">
+                    <h2>Contact Us</h2>
+                    <form id="contactForm" onsubmit="return validateForm()">
+                     <div class="form-group">
+                      <label for="name">Name:</label>
+                      <input type="text" id="name" name="name">
+                      <span id="nameError" class="error"></span>
+                     </div>
+                     <div class="form-group">
+                      <label for="email">Email:</label>
+                      <input type="email" id="email" name="email">
+                      <span id="emailError" class="error"></span>
+                     </div>
+                     <div class="form-group">
+                      <label for="message">Message:</label>
+                      <textarea id="message" name="message" rows="5"></textarea>
+                      <span id="messageError" class="error"></span>
+                     </div>
+                     <div class="form-group">
+                      <button type="submit">Submit</button>
+                     </div>
+                    </form>
+                   </div>
                 <div class="footer-container">
-                   <h3 class="link footer-left" href="#">BACK TO TOP</h3>
+                   <a class="link footer-left" href="#top">BACK TO TOP</a>
                   <div class="footer-icons">
                     <ul>
                       <li><a href="https://soundcloud.com/" target="_blank"><img src="images/soundcloud.png" class="footer-icons" alt="sound cloud icon"></a></li>
