--- a/src/Index.html
+++ b/src/Index.html
@@ -1,122 +1,216 @@
 <!DOCTYPE html>
-<!--Riley Strasser 3/2/25-->
+<!--Riley Strasser 3/9/25-->
 <html>
-    <head> 
+  <head>  
 <!--Data-->
-        <meta name="author" content="Riley Strasser">
-        <meta charset="UTF-8">
-        <meta content="description" name="Strauss Music">
-    	<meta name="keywords" content="UX UI software programming" />
-    	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>STRAÜSS</title> 
-	    <link rel="stylesheet" href="CSS/main.css" type="text/css">
-            <script src="TS/script.ts">
-            </script>
-        <noscript>Sorry, your browser does not support JavaScript!</noscript>
-    </head> 
-         <header>
-            <a id="top"></a>
+  <meta name="author" content="Riley Strasser">
+    <meta charset="UTF-8">
+    <meta content="description" name="Strauss Music">
+    <meta name="keywords" content="UX UI software programming" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>STRAÜSS</title> 
+	  <link rel="stylesheet" href="CSS/main.css" type="text/css">
+    <link rel="stylesheet" href="CSS/jquery-ui.css" type="text/css">
+    <script src="Scripts/script.ts"></script>
+    <script src="Scripts/js/jquery.js"></script>
+    <script src="Scripts/js/jqueryui.js"></script>
+    <noscript>Sorry, your browser does not support JavaScript!</noscript>
+  </head> 
+    <header>
+      <a id="top"></a>
 <!--Navigation Bar-->
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="#showtimessection">ShowTimes</a></li>
-                        <li><a href="#shopsection">Shop</a></li>
-                        <li><a href="#newmusicsection">New Music</a></li>
-                        <li><a href="#contactsection">Contact</a></li>
-                    </ul>
-                </nav>
-         </header>
-        <body>
-     <main>  
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#showtimessection">ShowTimes</a></li>
+            <li><a href="#newmusicsection">New Music</a></li>
+            <li><a href="#shopsection">Shop</a></li>
+            <li><a href="#videossection">Videos</a></li>
+            <li><a href="#contactsection">Contact</a></li>
+          </ul>
+        </nav>
+    </header>
+  <body>
+  <main>  
 <!--Homepage Video Container-->
-            <div id="home-container">
-                <div id="home" class="flexbox img"> 
-                    <video width="1400" height="500" autoplay loop muted>
-                    <source src="Videos/frontvid.mp4" type="video/mp4">
-                    your browser does not support the video tag.
-                    </video>
-                </div>
-            </div>
-         <hr>
-         <br>
-         <a id="showtimessection"></a>
-         <h2 id="ticket-button">Purchase Your Tickets Now!</h2>
-         <br>
-         <button type="button" onclick="myFunction()">Tickets <span>&#10230;</span></button>
-         <br>
-         <br>
-         <a id="newmusicsection"></a>
-         <div class="gallery-wrap">
-            <img src="images/back.png" id="backBtn">
-            <div class="gallery">
-                <div><span><img src="images/STAY AWHILE.png"></span>
-                    <span><img src="images/DANS.png"></span>
-                    <span><img src="images/LINEZ.png"></span>
-                </div>
-                <div>
-                    <span><img src="images/BURNFORYOU.png"></span>
-                    <span><img src="images/ENRGY.png"></span>
-                    <span><img src="images/SUBLIMINAL.png"></span>
-                </div>
-            </div>
-            <img src="images/next.png" id="nextBtn">
-        </div>
-         <a id="shopsection"></a>
-            <div id ="shop" class="shop-flex"> 
-                <div class="item1"><img src="images/STRAUSS_SHIRT.png"></div>
-                <div class="item2"><img src="images/STRAUSS_BEANIE.png"></div>
-                <div class="item3"><img src="images/STRAUSS_SS.png"></div>
-            </div>
-            <div id = "price-box" class="shop-flex">
-                <div class="price1"><h3>STRAÜSS T-Shirt</h3><h5>$24.99</h5></div>
-                <div class="price1"><h3>STRAÜSS Beanie</h3><h5>$16.99</h5></div>
-                <div class="price1"><h3>STRAÜSS Hoodie</h3><h5>$39.99</h5></div>
-            </div>
-        
-<!--Footer Links-->
-            <footer>
-                <a id="contactsection"></a>
+    <div id="home-container">
+      <div id="home" class="flexbox img"> 
+        <video width="1400" height="500" autoplay loop muted>
+          <source src="Videos/frontvid.mp4" type="video/mp4">
+          your browser does not support the video tag.
+        </video>
+      </div>
+    </div>
+<!--Homepage Video Container-->
+<a id="showtimessection"></a>
+      <h1>SHOW TIMES</h1>
+    <br>
+    <br>
+    <table class="styled-table">
+      <thead>
+        <tr>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">First ave</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">9:30 Club</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">Tower theatre</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">Club Space</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">Hollywood Bowl</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">El Club</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">Red Rocks</a></th>
+          <th><a href="https://www.ticketmaster.com/?landing=c&awtrc=true&c=SEM_TMBRAND_ggl_298560299_24300724499_ticketmaster&GCID=0&&gad_source=1&gclid=Cj0KCQiAz6q-BhCfARIsAOezPxmT3jRhO2gG-rqcDbqSlmEfsWygIwXjW6Wge-CWHnLoHAZU5zTkyucaAm6kEALw_wcB&gclsrc=aw.ds">Brooklyn Steel</a></th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Minneapolis</td>
+          <td>Washington D.C.</td>
+          <td>Philadelphia</td>
+          <td>Miami</td>
+          <td>Los Angeles</td>
+          <td>Detroit</td>
+          <td>Colorado</td>
+          <td>New York</td>
+        </tr>
+        <tr>
+          <td>May 1st</td>
+          <td>May 16th</td>
+          <td>May 24th</td>
+          <td>June 1st</td>
+          <td>June 7th</td>
+          <td>June 16th</td>
+          <td>June 27th</td>
+          <td>June 31th</td>
+        </tr>
+        <tr>
+          <td>$89.00</td>
+          <td>$94.00</td>
+          <td>$102.00</td>
+          <td>$76.00</td>
+          <td>$240.00</td>
+          <td>$165.00</td>
+          <td>$227.00</td>
+          <td>$124.00</td>
+        </tr>
+      </tbody>
+  </table>
+  <div class="ticket-text">
+    <h5>^^ Purchase Your tickets now! ^^</h5>
+  </div>
+<!-- Slideshow container -->
+ <br>
+ <br>
+ <br>
+ <br>
+ <a id="newmusicsection"></a>
+<h1>NEW RELEASES</h1>
+<div id="carousel-buttons" class="row">
+    <button id="left_button">&#8592;</button>
+    <button id="right_button">&#8594;</button>  
+</div>
+  <br>
+<div id="carousel-container">
+<div class="row">
+    <img src="images/ENRGY.png" height="300" width="350">
+    <img src="images/STAY AWHILE.png" height="300" width="350">
+    <img src="images/LINEZ.png" height="300" width="350">
+</div>
+</div>
+  <br>
+  <br>
+  <br>
+  <br>
+<!--Shop container-->
+<a id="shopsection"></a>
+<h1>MERCH</h1>
+
+      <div id ="shop" class="shop-flex"> 
+        <div class="item1">
+          <a href="https://shop.app/"><img src="images/STRAUSS_SHIRT.png" width="300" height="300"></a></div>
+        <div class="item2">
+          <a href="https://shop.app/"><img src="images/STRAUSS_BEANIE.png" width="300" height="300"></a></div>
+        <div class="item3">
+          <a href="https://shop.app/"><img src="images/STRAUSS_SS.png" width="300" height="300"></a></div>
+      </div>
+      <div id = "price-box" class="shop-flex">
+        <div class="price1">
+          <h5>STRAÜSS T-Shirt</h5><h6>$24.99</h6></div>
+        <div class="price1">
+          <h5>STRAÜSS Beanie</h5><h6>$16.99</h6></div>
+        <div class="price1">
+          <h5>STRAÜSS Hoodie</h5><h6>$39.99</h6></div>
+      </div>
+<a id="videossection"></a>
+<!--Video container-->  
+<h1>VIDEOS</h1>
+      <video class="video-container-right" width="600" height="500" controls>
+        <source src="Videos/videogetready.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+      <video class="video-container-right" width="600" height="500" controls>
+        <source src="Videos/video.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video>
+<!------------------------Footer Links------------------------->
+  <footer>
+<!--*jquery Rating Radio check box*-->
+<div class="widget">
+  <h2>Give us a Rating!</h2>
+  <script>
+    $(function () {
+        $("input[type='radio']").checkboxradio();
+    });
+</script>
+  <fieldset>
+    <h4>Select an option below: </h4>
+    <label for="radio-1">Not Good</label>
+    <input type="radio" name="radio-1" id="radio-1">
+    <label for="radio-2">Good</label>
+    <input type="radio" name="radio-1" id="radio-2">
+    <label for="radio-3">Amazing!</label>
+    <input type="radio" name="radio-1" id="radio-3">
+  </fieldset>
+</div>
+<!--*Contact Form*-->
+    <a id="contactsection"></a>
                 
-                <div class="contact-form">
-                    <h2>Contact Us</h2>
-                    <form id="contactForm" onsubmit="return validateForm()">
-                     <div class="form-group">
-                      <label for="name">Name:</label>
-                      <input type="text" id="name" name="name">
-                      <span id="nameError" class="error"></span>
-                     </div>
-                     <div class="form-group">
-                      <label for="email">Email:</label>
-                      <input type="email" id="email" name="email">
-                      <span id="emailError" class="error"></span>
-                     </div>
-                     <div class="form-group">
-                      <label for="message">Message:</label>
-                      <textarea id="message" name="message" rows="5"></textarea>
-                      <span id="messageError" class="error"></span>
-                     </div>
-                     <div class="form-group">
-                      <button type="submit">Submit</button>
-                     </div>
-                    </form>
-                   </div>
-                <div class="footer-container">
-                   <a class="link footer-left" href="#top">BACK TO TOP</a>
-                  <div class="footer-icons">
-                    <ul>
-                      <li><a href="https://soundcloud.com/" target="_blank"><img src="images/soundcloud.png" class="footer-icons" alt="sound cloud icon"></a></li>
-                      <li><a href="https://open.spotify.com/" target="_blank"><img src="images/spotify.png" class="footer-icons" alt="spotify icon"></a></li>
-                      <li><a href="https://music.apple.com/us/new" target="_blank"><img src="images/apple.png" class="footer-icons" alt="apple music icon"></a></li>
-                    </ul>
-                   </div>
-                </div>
-              <div id="grad" class="copyright">
-                <p>
-                    &#169; Riley Strasser, 2025.
-                </p>
-              </div>
-            </footer>
-        </main>
-    </body>
+      <div class="contact-form">
+        <h2>Contact Us</h2>
+        <form id="contactForm" onsubmit="return validateForm();">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name">
+            <span id="nameError" class="error"></span>
+          </div>
+          <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email">
+            <span id="emailError" class="error"></span>
+          </div>
+          <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5"></textarea>
+            <span id="messageError" class="error"></span>
+          </div>
+          <div class="form-group">
+            <button type="submit">Submit</button>
+          </div>
+          </form>
+          </div>
+          <div class="footer-container">
+          <a class="link footer-left" href="#top">BACK TO TOP</a>
+          <div class="footer-icons">
+            <ul>
+              <li><a href="https://soundcloud.com/" target="_blank"><img src="images/soundcloud.png" class="footer-icons" alt="sound cloud icon"></a></li>
+              <li><a href="https://open.spotify.com/" target="_blank"><img src="images/spotify.png" class="footer-icons" alt="spotify icon"></a></li>
+              <li><a href="https://music.apple.com/us/new" target="_blank"><img src="images/apple.png" class="footer-icons" alt="apple music icon"></a></li>
+            </ul>
+          </div>
+          </div>
+          <div id="grad" class="copyright">
+            <p>
+              &#169; Riley Strasser, 2025.
+            </p>
+          </div>
+      </footer>
+    </main>
+  </body>
 </html>
